Handle alpha tokens, processing them to a TokenType

--- a/LexicalAnalyzer/Makefile
+++ b/LexicalAnalyzer/Makefile
@@ -4,5 +4,5 @@ clean:
 	rm -rf *.o 
 	rm -rf *.exe
 
-lexer: analyzer.cpp
-	g++ -Wall -std=c++11 -o lexer analyzer.cpp analyzer.h
+lexer: analyzer.cpp token.cpp
+	g++ -Wall -std=c++11 -o lexer analyzer.cpp analyzer.h token.cpp token.h
