--- a/LexicalAnalyzer/Makefile
+++ b/LexicalAnalyzer/Makefile
@@ -1,8 +1,20 @@
-all: lexer
+CXX = g++
+CXXFLAGS = -Wall -std=c++11
+OBJS = main.o parser.o token.o analyzer.o
+
+all: parser
 
 clean: 
 	rm -rf *.o 
 	rm -rf *.exe
 
-lexer: analyzer.cpp token.cpp
-	g++ -Wall -std=c++11 -o lexer analyzer.cpp analyzer.h token.cpp token.h
+parser: $(OBJS)
+	$(CXX) $(FLAGS) $(OBJS) -o parser
+	
+main.o: main.cpp
+
+token.o: token.cpp
+
+analyzer.o: analyzer.cpp 
+
+parser.o: parser.cpp
